--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -26,7 +26,7 @@
 <body>
     <div id="wrapper">
         <div id="recognitionResults"></div>
-        <img id="videoFrame" src="" alt="Video Frame">
+        <img id="videoFrame" src="" alt="Video Frame" style="width: 100%; height: auto; display: block;">
     </div>
 
     <script>
