--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Stream</title>
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f0f0f0;
+        }
         #wrapper {
             position: relative;
         }
@@ -26,7 +35,7 @@
 <body>
     <div id="wrapper">
         <div id="recognitionResults"></div>
-        <img id="videoFrame" src="" alt="Video Frame" style="width: 100%; height: auto; display: block;">
+        <img id="videoFrame" src="" alt="Video Frame" style="width: 100%; display: block;">
     </div>
 
     <script>
