--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -30,10 +30,21 @@
             padding: 10px;
             border-radius: 5px;
         }
+        #spinner {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 10;
+        }
+        #videoFrame {
+            display: none; /* Initially hide the video frame */
+        }
     </style>
 </head>
 <body>
     <div id="wrapper">
+        <img id="spinner" src="./spinner.gif" alt="Loading...">
         <div id="recognitionResults"></div>
         <img id="videoFrame" src="" alt="Video Frame" style="width: 100%; display: block;">
     </div>
@@ -42,10 +53,11 @@
         let websocket;
         let reconnectInterval = 1000;
         let lastUpdate = 0;
-        
+
         const minUpdateInterval = 10;
         const resultsDiv = document.getElementById("recognitionResults");
         const videoFrame = document.getElementById('videoFrame');
+        const spinner = document.getElementById('spinner');
 
         function runSocket() {
             console.log('Connecting to WebSocket...');
@@ -69,10 +81,19 @@
             websocket.onmessage = function(event) {
                 const now = Date.now();
                 if (now - lastUpdate < minUpdateInterval) return;
-                console.log('event.data: ', event.data);
+
+                // Show the spinner while the image is loading
+                spinner.style.display = 'block';
+                videoFrame.style.display = 'none';
+
                 const url = URL.createObjectURL(event.data);
-                console.log(url);
+                videoFrame.onload = function() {
+                    // Hide the spinner and show the image once it's loaded
+                    spinner.style.display = 'none';
+                    videoFrame.style.display = 'block';
+                };
                 videoFrame.src = url;
+
                 lastUpdate = now;
             };
         }
@@ -86,7 +107,6 @@
         setTimeout(() => {
             location.reload();
         }, 60000);
-
     </script>
 </body>
 </html>
