--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -44,16 +44,16 @@
 </head>
 <body>
     <div id="wrapper">
-        <img id="spinner" src="./spinner.gif" alt="Loading...">
+        <img id="spinner" src="spinner.gif" alt="Loading...">
         <div id="recognitionResults"></div>
-        <img id="videoFrame" src="" alt="Video Frame" style="width: 100%; display: block;">
+        <img id="videoFrame" src="" alt="Video Frame" style="width: 100%;">
     </div>
 
     <script>
         let websocket;
         let reconnectInterval = 1000;
         let lastUpdate = 0;
-
+        
         const minUpdateInterval = 10;
         const resultsDiv = document.getElementById("recognitionResults");
         const videoFrame = document.getElementById('videoFrame');
@@ -81,24 +81,15 @@
             websocket.onmessage = function(event) {
                 const now = Date.now();
                 if (now - lastUpdate < minUpdateInterval) return;
-
-                // Show the spinner while the image is loading
-                spinner.style.display = 'block';
-                videoFrame.style.display = 'none';
-
                 const url = URL.createObjectURL(event.data);
-                videoFrame.onload = function() {
-                    // Hide the spinner and show the image once it's loaded
-                    spinner.style.display = 'none';
-                    videoFrame.style.display = 'block';
-                };
                 videoFrame.src = url;
-
                 lastUpdate = now;
             };
         }
 
         document.addEventListener('DOMContentLoaded', () => {
+            spinner.style.display = 'none';
+            videoFrame.style.display = 'block';
             console.log('Page loaded, initializing WebSocket...');
             setTimeout(runSocket, 1000);
         });
@@ -107,6 +98,7 @@
         setTimeout(() => {
             location.reload();
         }, 60000);
+
     </script>
 </body>
 </html>
