--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -88,6 +88,7 @@
         }
 
         document.addEventListener('DOMContentLoaded', () => {
+            console.log(DOMContentLoaded);
             spinner.style.display = 'none';
             videoFrame.style.display = 'block';
             console.log('Page loaded, initializing WebSocket...');
