--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <img id="spinner" src="web/spinner.gif" alt="Loading..." />
+        <img id="spinner" src="../spinner.gif" alt="Loading..." />
         <div id="recognitionResults"></div>
         <img id="videoFrame" src="" alt="Video Frame" />
     </div>
